--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                     <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                     </div>
-                                    <img class="img-fluid" src="img/prt5.jpeg" alt="..." />
+                                    <img class="img-fluid" src="Img/prt5.jpeg" alt="">
                                 </a>
                               
                             </div>
